--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "webpack-dev-server --port=4200",
+    "start": "webpack && node app.js",
     "build": "webpack",
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "angularfire2": "^5.0.0-rc.4",
+    "colors": "^1.1.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "firebase": "^4.8.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
