--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,15 @@ language: node_js
 sudo: false
 node_js:
   - '7.10.0'
+
 install:
   - npm install
+
+before_script:
+  - npm install -g firebase-tools
+
 script:
   - npm run-script build
+
+after_success:
+  - firebase deploy --token $firebase_token
